<resources>
    <string name="app_name">oburie</string>


    <string name="naver_client_id">ALaGj0ksb3MORKkBovH7</string>
    <string name="naver_client_secret">NwVhKB7kqb</string>
    <string name="naver_client_name">오부리</string>

    <string name="facebook_app_id">4143894089014489</string>

    <string name="kakao_app_key">7e9f8aa3528153535f9555b4e86966c7</string>
    <string name="kakao_native_app_key">kakao7e9f8aa3528153535f9555b4e86966c7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_popular">이달의 인기왕</string>
    <string name="show_all">전체보기</string>
    <string name="new_face">떠오르는 샛별</string>
    <string name="home_group">단체공연은 어때요?</string>
    <string name="how_together_review">님과 공연은 어땠나요??</string>
    <string name="next_edit">다음에 남길게요</string>
    <string name="review_edit">리뷰 남기기</string>
    <string name="select_location">🧐 지역을 선택해 주세요(최대 3개)</string>
    <string name="joboffer_title_hint">제목을 입력해주세요.</string>
    <string name="inquiry">문의하기</string>
    <string name="apply">지원하기</string>
    <string name="reply_answer">답글 작성</string>
    <string name="complete">완료</string>
    <string name="find_address">주소 검색</string>
    <string name="select">선택완료</string>
    <string name="job_offer_title">원하는 내용을 간략히 적어주세요 😄</string>
    <string name="job_offer_title_hint">제목을 입력해주세요.(최대 50자)</string>
    <string name="upload_need_date">필요한 날짜는 언제인가요??</string>
    <string name="upload_start_time">시작 시간은 언제인가요??</string>
    <string name="upload_need_time">얼마나 필요한가요??</string>
    <string name="upload_where_meet">어디에서 만날까요??</string>
    <string name="upload_money_offer">얼마까지 줄수있어요??</string>
    <string name="gender_all">무관</string>
    <string name="gender_woman">여성</string>
    <string name="gender_man">남성</string>
    <string name="edit_money">금액을 입력하세요.</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="upload_profile">프로필 등록</string>
    <string name="upload_normal_profile">기본 정보 입력</string>
    <string name="upload_detail_profile">상세 정보 입력</string>
    <string name="upload_active_profile">활동 정보 입력</string>
    <string name="normal_upload_title">기본 정보를 입력해주세요.</string>
    <string name="regist">등록</string>
    <string name="upload_resume_title">활동명(제목)</string>
    <string name="upload_resume_title_hint">활동명 입력(ex. 모든행사 보컬 다 뜁니다!!</string>
    <string name="upload_resume_major">전문분야를 선택해주세요.</string>
    <string name="upload_resume_gender">성별</string>
    <string name="upload_resume_birth_year_title">출생년도를 선택해주세요</string>
    <string name="upload_resume_birth_year">출생년도</string>
    <string name="upload_resume_location_title">활동 가능한 지역을 선택해주세요. (최대 3개)</string>
    <string name="upload_resume_location">지역을 선택해주세요.</string>
    <string name="upload_resume_introduce_title">소개</string>
    <string name="upload_resume_introduce">당신을 섭외해야 하는 이유 3가지, 진행방식 등</string>
    <string name="upload_resume_introduce_hint">예) 성격, 장점, 진행방식 등</string>
    <string name="my_job_offer_text">게시글 수정은 글 작성일로부터 일주일 이내로 수정이 가능합니다.\n \n 게시글 삭제는 현재 거래 진행중인 상태일 경우 수정, 삭제가 불가능합니다.\n \n 끌어올리긴느 글 하나당 한번씩만 가능합니다.\n \n * 부공연자구할때 해당)\n 취소하고 거래완료처리버튼 : 부공연자를 구할 필요성을 느끼지 못했을 때 미리 거래를 완료처리하는 버튼입니다.</string>

    <string name="ob_history">오부리 내역</string>
    <string name="user_page">상대페이지</string>
    <string name="write_review">리뷰 작성</string>
    <string name="like_expert">찜한 전문가</string>
    <string name="my_jobhunter">나의 게시물</string>
    <string name="user_info_setting">유저정보 수정</string>
    <string name="setting">설정</string>
</resources>