<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.lakue.oburie.ui.myresume.upload.normal.ResumeUploadNormalViewModel" />
        <variable
            name="activity"
            type="com.lakue.oburie.ui.myresume.upload.normal.ResumeUploadNormalActivity" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            app:headTitle="@{@string/upload_normal_profile}"
            layout="@layout/include_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingTop="16dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="28dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="14dp"
                        android:text="@string/upload_resume_title"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:fontFamily="@font/applesdgothicneob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:layout_marginTop="16dp"
                        android:hint="@string/upload_resume_title_hint"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingRight="8dp"
                        android:paddingLeft="8dp"
                        android:fontFamily="@font/applesdgothicneol"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:textSize="14dp"
                        android:background="@drawable/background_round_5_stroek_dddddd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="24dp"
                        android:textSize="14dp"
                        android:text="@string/upload_resume_major"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:fontFamily="@font/applesdgothicneob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.lakue.oburie.view.ObRecyclerView
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:spanCount="4" />

                    <TextView
                        android:layout_marginTop="24dp"
                        android:textSize="14dp"
                        android:text="@string/upload_resume_gender"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:fontFamily="@font/applesdgothicneob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            app:cardElevation="0dp"
                            android:backgroundTint="@color/selector_fd9426_to_f8f8f8"
                            android:background="@drawable/background_round_10"
                            android:layout_width="100dp"
                            android:layout_height="100dp">

                            <ImageView
                                android:padding="12dp"
                                android:src="@drawable/ic_man"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            app:cardElevation="0dp"
                            android:backgroundTint="@color/selector_fd9426_to_f8f8f8"
                            android:background="@drawable/background_round_10"
                            android:layout_marginStart="16dp"
                            android:layout_width="100dp"
                            android:layout_height="100dp">

                            <ImageView
                                android:padding="12dp"
                                android:src="@drawable/ic_woman"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <TextView
                        android:textSize="14dp"
                        android:text="@string/upload_resume_birth_year_title"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:fontFamily="@font/applesdgothicneob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="SpUsage" />

                    <LinearLayout
                        android:tag="needTime"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingRight="16dp"
                        android:paddingLeft="16dp"
                        android:background="@drawable/background_round_5_stroek_dddddd"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:textColor="@color/color_dark_ffffff_000000"
                            android:text="@string/upload_resume_birth_year"
                            android:fontFamily="@font/applesdgothicneol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="SpUsage" />

                        <ImageView
                            app:tint="@color/color_dark_ffffff_000000"
                            android:src="@drawable/ic_round_arrow_drop_down_24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="24dp"
                        android:textSize="14dp"
                        android:text="@string/upload_resume_location_title"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:fontFamily="@font/applesdgothicneob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="SpUsage" />

                    <LinearLayout
                        android:tag="needTime"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingRight="16dp"
                        android:paddingLeft="16dp"
                        android:background="@drawable/background_round_5_stroek_dddddd"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_need_time"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:textColor="@color/color_dark_ffffff_000000"
                            android:text="@string/upload_resume_location"
                            android:fontFamily="@font/applesdgothicneol"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="24dp"
                        android:textSize="14dp"
                        android:text="@string/upload_resume_introduce_title"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:fontFamily="@font/applesdgothicneob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:layout_marginTop="4dp"
                        android:textSize="12dp"
                        android:text="@string/upload_resume_introduce"
                        android:textColor="@color/gray_900"
                        android:fontFamily="@font/applesdgothicneol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/background_round_5_stroek_dddddd"
                        android:fontFamily="@font/applesdgothicneol"
                        android:gravity="top"
                        android:hint="@string/upload_resume_introduce_hint"
                        android:minHeight="200dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp"
                        android:textColor="@color/color_dark_ffffff_000000"
                        android:textSize="14dp"
                        tools:ignore="SpUsage" />

                </LinearLayout>



            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:backgroundTint="@color/color_dark_000000_ffffff"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:foreground="@drawable/ripple_action"
                style="@style/BottomCompleteButton"
                android:text="@string/regist"/>

        </LinearLayout>

    </LinearLayout>

</layout>
